--- a/style.css
+++ b/style.css
@@ -16,8 +16,19 @@ section {
 
 .half-width {
     width: 50%;
+    padding-left: 2%;
 }
 
 .half-width img {
-    width: 300%;
+    width: 80%;
+}
+
+.link-button {
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    background-image: linear-gradient(orange, red);
+    background-color: orange;
+    padding: 10px 40px;
+    border-radius: 5px;
 }
