--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
@@ -29,7 +34,6 @@ section {
     color: white;
     font-weight: 700;
     background-image: linear-gradient(orange, red);
-    background-color: orange;
     padding: 10px 40px;
     border-radius: 5px;
 }
@@ -37,4 +41,38 @@ section {
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.mid-banner {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+
+}
+
+.experience {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+}
+
+#full-stack-web-dev {
+    border-left: 7px solid red;
+}
+
+#baby-web-dev {
+    border-left: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
